--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>THANH NGUYEN</h1>
         <p>IT student at Saigon University | Free man struggles with life | 
             Introvert in an extroverted world.</p>
-        <p><a href="./publics/hobbies.html">My hobbies</a></p>
+        <p><a href="./public/hobbies.html">My hobbies</a></p>
         <p><a href="./public/contact.html">My contact</a></p>
         <hr />
         
